--- a/blocks/quick-tip/quick-tip.css
+++ b/blocks/quick-tip/quick-tip.css
@@ -2,20 +2,22 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
-  background-color: #f4f4f4;
 }
 
-.quick-tip ul, p{
+.quick-tip ul {
   color: #555;
   list-style-type: disc;
-  background-color: #f4f4f4;
+}
+
+.quick-tip p {
+  color: #555;
+  list-style-type: disc;
 }
 
 .quick-tip li {
   margin: 5px 0; /* Space between list items */
   font-size: 1em;
   color: #555;
-  background-color: #f4f4f4;
 }
 
 .quick-tip-wrapper {
@@ -23,6 +25,6 @@ body {
   border-radius: 15px; /* Curved corners */
   padding: 20px; /* Space inside the border */
   margin: 20px 0; /* Space around the container */
-  background-color: #f4f4f4;
+  /*background-color: #f4f4f4;*/
   box-shadow: 0 2px 5px rgba(0 0 0 / 10%); /* Optional shadow for depth */
 }
