--- a/blocks/quick-tip/quick-tip.css
+++ b/blocks/quick-tip/quick-tip.css
@@ -1,23 +1,23 @@
 .quick-tip ul {
-  color: #555;
+  color: -var(--dark-gray);
   list-style-type: disc;
 }
 
 .quick-tip p {
-  color: #555;
+  color: -var(--dark-gray);
   list-style-type: disc;
 }
 
 .quick-tip li {
-  margin: 5px 0; /* Space between list items */
+  margin: 5px 0;
   font-size: 1em;
-  color: #555;
+  color:-var(--dark-gray);
 }
 
 .quick-tip-wrapper {
-  border: 2px solid #555; /* Border color and thickness */
-  border-radius: 15px; /* Curved corners */
-  padding: 20px; /* Space inside the border */
-  margin: 20px 0; /* Space around the container */
-  box-shadow: 0 2px 5px rgba(0 0 0 / 10%); /* Optional shadow for depth */
+  border: 2px solid -var(--dark-gray);
+  border-radius: 15px;
+  padding: 20px;
+  margin: 20px 0;
+  box-shadow: 0 2px 5px rgba(0 0 0 / 10%);
 }
