--- a/blocks/quick-tip/quick-tip.css
+++ b/blocks/quick-tip/quick-tip.css
@@ -1,21 +1,21 @@
 .quick-tip ul {
-  color: -var(--dark-gray);
+  color: #555;
   list-style-type: disc;
 }
 
 .quick-tip p {
-  color: -var(--dark-gray);
+  color: #555;
   list-style-type: disc;
 }
 
 .quick-tip li {
   margin: 5px 0;
   font-size: 1em;
-  color:-var(--dark-gray);
+  color: #555;
 }
 
 .quick-tip-wrapper {
-  border: 2px solid -var(--dark-gray);
+  border: 2px solid #555;
   border-radius: 15px;
   padding: 20px;
   margin: 20px 0;
