--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -23,14 +23,14 @@ main > .section-outer > .section.hero-container{
   margin-left: auto;
   margin-right: auto;
   color: var(--background-color);
-  font-size: 60px;
+  font-size: var(--heading-font-size-l);
 }
 
 .hero .hero-content h2 {
   color: white;
-  font-weight: 700;
+  font-weight: var(--font-weight-extra-bold);
   text-wrap: wrap;
-  font-size: 24px;
+  font-size: var(--heading-font-size-s);
 }
 
 .hero picture {
@@ -47,13 +47,13 @@ main > .section-outer > .section.hero-container{
   height: 100%;
 }
 
-@media (width >= 1200px) {  
+@media (width >= 1200px) {
   .hero {
     padding: 40px 32px;
   }
 
   .hero .hero-content h2 {
     width: 40%;
-    font-size: 32px;
+    font-size: var(--heading-font-size-l);
   }
 }
