--- a/blocks/related-posts/related-posts.css
+++ b/blocks/related-posts/related-posts.css
@@ -11,7 +11,7 @@
         }
 
         h3 {
-            font-size: 18px;
+            font-size: var(--body-font-size-m);
             font-weight: bold;
             line-height: 1.45;
             margin-bottom: 1em;
