orange header font color

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -18,7 +18,7 @@ header .nav-wrapper .nav-announcement {
 }
 
 header .nav-wrapper .nav-announcement a {
-  color: var(--white);
+  color: var(--laz-black);
   background-color: var(--orange);
   font-weight: var(--font-weight-bold);
   text-align: center;
