--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,8 @@
   --background-color: white;
   --light-color: #f8f8f8;
   --dark-color: #505050;
+  --medium-gray: #555;
+  --medium-light-gray: #777;
   --text-color: #131313;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
