--- a/blocks/news-filter/news-filter.css
+++ b/blocks/news-filter/news-filter.css
@@ -69,7 +69,7 @@
 .news-cards .card .news-date {
     font-size: 16px;
     font-weight: 600;
-    color: #717171;
+    color: var(--dark-gray);
     text-transform: uppercase;
 }
 
