--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -102,7 +102,7 @@
   }
 
   .pagination-container a:not([href]) {
-    color: #666;
+    color: #666 !important;
     pointer-events: none;
     cursor: default;
   }
