--- a/blocks/news-filter/news-filter.css
+++ b/blocks/news-filter/news-filter.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 80%;
+    width: 100%;
     height: auto;
 
     p>span::after {
@@ -69,7 +69,7 @@
 .news-cards .card .news-date {
     font-size: 16px;
     font-weight: 600;
-    color: #717171;
+    color: var(--dark-gray);
     text-transform: uppercase;
 }
 
