--- a/blocks/news-filter/news-filter.css
+++ b/blocks/news-filter/news-filter.css
@@ -66,7 +66,6 @@
 
         img {
             width: 100%;
-            height: 100%;
             object-fit: cover;
             aspect-ratio: 4/3;
         }
@@ -90,7 +89,7 @@
         text-align: center;
 
         picture {
-            width: 90%;
+            max-width: 90%;
         }
     }
 }
