--- a/blocks/events-filter/events-filter.css
+++ b/blocks/events-filter/events-filter.css
@@ -26,7 +26,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    border-top: 1px solid var(--light-grey);
+    border-top: 1px solid var(--light-gray);
     flex-direction: row;
 }
 
