--- a/blocks/news-filter/news-filter.css
+++ b/blocks/news-filter/news-filter.css
@@ -20,7 +20,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    border-top: 1px solid var(--light-grey);
+    border-top: 1px solid var(--light-gray);
     flex-direction: column-reverse;
 }
 
