--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,8 @@
   --yellow: #FDDC3F;
   --white: #FFF;
   --off-white: #F6F6F6;
-  --light-grey: #CBCBCB;
+  --light-gray: #CBCBCB;
+  --very-light-gray: #f8f8f8;
   --divider-gray: #eee;
   --black: #000;
   --light-red: #ed7790;
