--- a/templates/news-post/news-post.css
+++ b/templates/news-post/news-post.css
@@ -44,7 +44,7 @@
     .tabs {
         .tabs-panel {
             margin-top: 10px;
-            border-top: 1px solid var(--light-grey);
+            border-top: 1px solid var(--light-gray);
             padding: 24px 0;
         }
 
@@ -66,9 +66,9 @@
                 }
 
                 &[aria-selected='true'] {
-                    border-top: 1px solid var(--light-grey);
-                    border-left: 1px solid var(--light-grey);
-                    border-right: 1px solid var(--light-grey);
+                    border-top: 1px solid var(--light-gray);
+                    border-left: 1px solid var(--light-gray);
+                    border-right: 1px solid var(--light-gray);
                     color: var(--text-color);
                 }
             }
