--- a/templates/common-core/common-core.css
+++ b/templates/common-core/common-core.css
@@ -5,8 +5,12 @@
     min-width: 270px;
 
     ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
 
       li {
+        margin: 0;
         border-bottom: 1px solid #aaa;
         &:first-child { border-top: 1px solid #aaa }
 
